# PyPI-Notifier

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_notifier.py
pypi_notifier/: __init__.py  config.py  database.py  notifier.py
src/: config.py  logger.py  pypi_notifier.py
